text color fixed on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2645,7 +2645,7 @@ input[type=checkbox] {
         display: none;
         font-size: 2.1rem;
         text-wrap: wrap;
-        color: #31AA5B;
+        color: #2BD52D;
     }
 
     .coded_in_ascii {
